--- a/package.json
+++ b/package.json
@@ -3,23 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "agama-wallet-lib": "git+https://github.com/VerusCoin/agama-wallet-lib.git#dev",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.1.0",
+    "@testing-library/user-event": "12.1.10",
     "blake2b": "https://github.com/michaeltout/blake2b.git",
-    "crypto-js": "^4.0.0",
-    "passwd-strength": "https://github.com/michaeltout/passwd-strength.git",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-minimal-pie-chart": "^5.0.2",
+    "crypto-js": "4.0.0",
+    "prop-types": "15.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "react-redux": "7.1.1",
-    "react-router": "^3.2.1",
-    "redux": "^3.6.0",
-    "web-vitals": "^0.2.4"
+    "react-router": "3.2.1",
+    "redux": "3.6.0"
   },
   "scripts": {
     "start": "./node_modules/webpack-dashboard/bin/webpack-dashboard.js -t 'verus-desktop-authenticator' -- ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --colors --no-info --mode development"
@@ -43,72 +39,72 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-decorators": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.0",
-    "css-loader": "^0.26.1",
-    "electron": "^11.1.1",
-    "html-webpack-plugin": "^3.0.7",
-    "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.13.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.10",
-    "webpack-dashboard": "^3.3.1",
-    "webpack-dev-server": "^3.11.0"
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-decorators": "7.0.0",
+    "@babel/plugin-proposal-do-expressions": "7.0.0",
+    "@babel/plugin-proposal-export-default-from": "7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
+    "@babel/plugin-proposal-function-bind": "7.0.0",
+    "@babel/plugin-proposal-function-sent": "7.0.0",
+    "@babel/plugin-proposal-json-strings": "7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "7.0.0",
+    "@babel/plugin-syntax-decorators": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-syntax-import-meta": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "babel-loader": "8.0.0",
+    "css-loader": "0.26.1",
+    "electron": "11.1.1",
+    "html-webpack-plugin": "3.0.7",
+    "mini-css-extract-plugin": "0.4.4",
+    "node-sass": "4.13.1",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.13.0",
+    "uglifyjs-webpack-plugin": "2.2.0",
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.10",
+    "webpack-dashboard": "3.3.1",
+    "webpack-dev-server": "3.11.0"
   },
   "resolutions": {
-    "lodash": "^4.17.21",
-    "static-eval": "^2.0.2",
-    "tar": "^4.4.15",
-    "js-yaml": "^3.13.1",
-    "braces": "^3.0.2",
-    "handlebars": "^4.7.7",
-    "serialize-javascript": "^3.1.0",
+    "lodash": "4.17.21",
+    "static-eval": "2.0.2",
+    "tar": "4.4.15",
+    "js-yaml": "3.13.1",
+    "braces": "3.0.2",
+    "handlebars": "4.7.7",
+    "serialize-javascript": "3.1.0",
     "bin-links": "1.1.6",
     "https-proxy-agent": "2.2.4",
-    "http-proxy": "^1.18.1",
+    "http-proxy": "1.18.1",
     "mem": "4.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "acorn": "^6.4.0",
-    "kind-of": "^6.0.3",
-    "yargs-parser": "^13.1.2",
-    "minimist": "^1.2.5",
-    "elliptic": "^6.5.4",
-    "dot-prop": "^5.2.0",
-    "npm-registry-fetch": "^4.0.5",
-    "node-fetch": "^2.6.1",
-    "node-forge": "^0.10.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "acorn": "6.4.0",
+    "kind-of": "6.0.3",
+    "yargs-parser": "13.1.2",
+    "minimist": "1.2.5",
+    "elliptic": "6.5.4",
+    "dot-prop": "5.2.0",
+    "npm-registry-fetch": "4.0.5",
+    "node-fetch": "2.6.1",
+    "node-forge": "0.10.0",
     "ini": "1.3.8",
-    "socket.io": "^3.1.1",
+    "socket.io": "3.1.1",
     "y18n": "5.0.5",
     "xmlhttprequest-ssl": "1.6.2",
     "ssri": "8.0.1",
     "hosted-git-info": "3.0.8",
-    "ua-parser-js": "^0.7.24",
-    "url-parse": "^1.5.1",
+    "ua-parser-js": "0.7.24",
+    "url-parse": "1.5.1",
     "ajv": "6.12.3",
     "dns-packet": "1.3.4",
     "ws": "7.4.6",
@@ -116,7 +112,7 @@
     "glob-parent": "5.1.2",
     "trim-newlines": "4.0.1",
     "immer": "8.0.1",
-    "postcss": "^5.2.16",
+    "postcss": "5.2.16",
     "browserslist": "4.16.5",
     "normalize-url": "6.0.1",
     "color-string": "1.5.5",
