--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.11.2",
-    "@material-ui/icons": "4.11.2",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.6",
+    "@mui/styles": "^5.0.2",
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
     "blake2b": "https://github.com/michaeltout/blake2b.git",
     "crypto-js": "4.0.0",
+    "node-sass": "4.14.1",
     "prop-types": "15.7.2",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-redux": "7.1.1",
     "react-router": "3.2.1",
     "redux": "3.6.0"
@@ -65,7 +68,6 @@
     "electron": "11.1.1",
     "html-webpack-plugin": "3.0.7",
     "mini-css-extract-plugin": "0.4.4",
-    "node-sass": "4.13.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.13.0",
     "uglifyjs-webpack-plugin": "2.2.0",
