--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "verus-desktop-authenticator",
+  "name": "verus-login-consent-client",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
@@ -11,7 +10,7 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
-    "blake2b": "https://github.com/michaeltout/blake2b.git",
+    "blake2b": "https://github.com/VerusCoin/blake2b.git",
     "crypto-js": "4.0.0",
     "node-sass": "4.14.1",
     "prop-types": "15.7.2",
@@ -20,7 +19,7 @@
     "react-redux": "7.1.1",
     "react-router": "3.2.1",
     "redux": "3.6.0",
-    "verus-typescript-primitives": "https://github.com/michaeltout/verus-typescript-primitives.git"
+    "verus-typescript-primitives": "https://github.com/VerusCoin/verus-typescript-primitives.git"
   },
   "scripts": {
     "start": "./node_modules/webpack-dashboard/bin/webpack-dashboard.js -t 'verus-desktop-authenticator' -- ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --colors --no-info --mode development",
