--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bignumber.js": "^9.1.2",
     "blake2b": "https://github.com/VerusCoin/blake2b.git",
     "crypto-js": "4.2.0",
+    "file-loader": "^6.2.0",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
