Fix bignumber.js and file-loader to be fixed versions and display the i-address of identity that made the login consent request.

--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
     "base64url": "https://github.com/VerusCoin/base64url.git",
-    "bignumber.js": "^9.1.2",
+    "bignumber.js": "9.1.2",
     "blake2b": "https://github.com/VerusCoin/blake2b.git",
     "crypto-js": "4.2.0",
-    "file-loader": "^6.2.0",
+    "file-loader": "6.2.0",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
