--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "axios": "1.7.7",
     "base64url": "https://github.com/VerusCoin/base64url.git",
     "bignumber.js": "9.1.2",
     "blake2b": "https://github.com/VerusCoin/blake2b.git",
@@ -68,8 +69,13 @@
     "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "7.0.0",
     "@babel/preset-react": "7.0.0",
+    "@eslint/js": "9.16.0",
+    "@stylistic/eslint-plugin-js": "2.11.0",
     "babel-loader": "8.3.0",
     "css-loader": "4.3.0",
+    "eslint": "9.16.0",
+    "eslint-plugin-react": "7.37.2",
+    "globals": "15.13.0",
     "html-webpack-plugin": "4.5.2",
     "mini-css-extract-plugin": "1.6.2",
     "node-sass": "9.0.0",
